<resources>
    <string name="app_name">Driving Assistant</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="map_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCrO7kgh1q6qVCRkAH2GPpjYWnnLXxsK2U
    </string>
    <string name="description_info" translatable="false">Info</string>
    <string name="request_permission" translatable="false">This sample needs camera permission.</string>
    <string name="camera_error" translatable="false">This device doesn\'t support Camera2 API.</string>
    <string name="gps_disabled" translatable="false">GPS disabled</string>
    <string name="please_enable_gps" translatable="false">In order to get current speed the GPS must be enabled.</string>
    <string name="waiting_for_fix" translatable="false">Waiting for GPS fix</string>
    <string name="stg_settings">Settings</string>
    <string name="stg_map">Map</string>
    <string name="stg_language">Language</string>
    <string name="stg_noti">Notifications and sound</string>
    <string name="stg_navigation">Navigation</string>
    <string name="stg_storage">Storage</string>
    <string name="stg_info">Info</string>
    <string name="search_view">Search here…</string>
    <string name="restaurant_icon">Restaurants</string>
    <string name="hotel_icon">Hotels</string>
    <string name="coffee_icon">Coffee</string>
    <string name="more_icon">More</string>
    <string name="tfe_od_camera_error" translatable="false" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>

    <string name="current_distance">Current\ndistance</string>
    <string name="total_distance">Total\ndistance</string>
    <string name="sign_detected">Detected signs</string>
    <string name="inference_time">Inference time</string>
    <string name="satellite">Satellite</string>
    <string name="gps_status">GPS status</string>
    <string name="gps_accuracy">GPS accuracy</string>
    <string name="threads">Threads</string>
    <string name="confidence">Confidence</string>
    <string name="sign_noti">Notification</string>
    <string name="btn_next" translatable="false">Next</string>
    <string name="history_time">Recording time</string>
    <string name="history_location">Location</string>
    <string name="history_speed">Speed</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="location">Location</string>
    <string name="speed">Speed</string>
    <string name="traffic_sign">Traffic Sign</string>
    <string name="str_hp_sign_recognition">Sign\nrecognition</string>
    <string name="str_welcome_vda">Virtual Driving Assistant</string>
    <string name="str_welcome_description">Find places and routes to your destination\neasily and conveniently with maps and\ndetect traffic signs with AR technology.</string>
    <string name="str_get_started">Get started</string>
    <string name="str_vda_slogan" translatable="false">Drive safely, live happily</string>
    <string name="str_info_version">App version: 1.0</string>
    <string name="str_info_contact">Contact: support.vda@kime.vn</string>
    <string name="str_lang_en">English</string>
    <string name="str_lang_vi">Vietnam</string>
    <string name="str_select_lang">Select language</string>
    <string name="str_login">Login</string>
    <string name="str_login_username">Email or username</string>
    <string name="str_login_password">Password</string>
    <string name="str_login_register_1">Don\'t have account?</string>
    <string name="str_login_register_2">Register</string>
    <string name="str_register_registration">REGISTRATION</string>
    <string name="str_register_note">Please fill all fields</string>
    <string name="str_register_cancel">CANCEL</string>
    <string name="str_register">REGISTER</string>
    <string name="str_register_warn_email">Email cannot be null or empty</string>
    <string name="str_register_warn_name">Name cannot be null or empty</string>
    <string name="str_register_warn_password">Password cannot be null or empty</string>
    <string name="str_login_hello">"Hello, "</string>
    <string name="engine_init_error" translatable="false">Map engine initialization</string>

    // added
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiaGNtdXQyMzJrIiwiYSI6ImNrcnk4c3FqeDA2OG4ydW9lMGI3bmk5M3gifQ.G2fAz-JC53S9Q09AegOPKA</string>
    <string name="user_location_permission_explanation" translatable="false">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted" translatable="false">You didn\'t grant location permissions.</string>
</resources>