<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/roboto"
        app:met_textColorHint="@color/myTextColor"
        app:met_baseColor="@color/myTextColor"
        app:met_primaryColor="@color/myTextColor"
        app:met_iconPadding="0dp"
        android:background="@null"
        android:drawableEnd="@drawable/ic_email">

    </com.rengwuxian.materialedittext.MaterialEditText>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_name"
        android:hint="@string/name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/roboto"
        app:met_textColorHint="@color/myTextColor"
        app:met_baseColor="@color/myTextColor"
        app:met_primaryColor="@color/myTextColor"
        app:met_iconPadding="0dp"
        android:background="@null"
        android:drawableRight="@drawable/ic_user">

    </com.rengwuxian.materialedittext.MaterialEditText>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edit_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/roboto"
        app:met_textColorHint="@color/myTextColor"
        app:met_baseColor="@color/myTextColor"
        app:met_primaryColor="@color/myTextColor"
        app:met_iconPadding="0dp"
        android:background="@null"
        android:drawableRight="@drawable/ic_lock">
    </com.rengwuxian.materialedittext.MaterialEditText>
</LinearLayout>