<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SettingsActivity">


    <ImageView
        android:id="@+id/bgd_rec_gra"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_background_rectangle_gradient" />

    <ImageView
        android:id="@+id/bgd_cir_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_bgd_circle_1" />

    <ImageView
        android:id="@+id/bgd_cir_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/bgd_rec_gra"
        app:layout_constraintTop_toTopOf="@id/bgd_rec_gra"
        app:srcCompat="@drawable/settings_bgd_circle_2" />

    <ImageButton
        android:id="@+id/btn_left_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:background="@null"
        android:onClick="returnHome"
        app:layout_constraintBottom_toBottomOf="@+id/str_settings"
        app:layout_constraintStart_toStartOf="@+id/bgd_rec"
        app:layout_constraintTop_toTopOf="@+id/str_settings"
        app:srcCompat="@drawable/settings_icon_left_arrow" />

    <TextView
        android:id="@+id/str_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto"
        android:outlineAmbientShadowColor="#801717"
        android:outlineSpotShadowColor="#880808"
        android:shadowColor="#B12323"
        android:text="@string/stg_settings"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bgd_rec_gra"
        app:layout_constraintStart_toStartOf="@+id/bgd_rec_gra"
        app:layout_constraintTop_toTopOf="@+id/bgd_rec_gra" />

    <ImageView
        android:id="@+id/bgd_rec"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="@id/bgd_rec_gra"
        app:layout_constraintStart_toStartOf="@id/bgd_rec_gra"
        app:layout_constraintTop_toTopOf="@+id/scrollView"
        app:srcCompat="@drawable/settings_bgd_rectangle" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bgd_rec_gra"
        app:layout_constraintStart_toStartOf="@id/bgd_rec_gra"
        app:layout_constraintTop_toTopOf="@id/bgd_rec_gra"
        app:layout_constraintVertical_bias="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/btn_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:srcCompat="@drawable/settings_icon_map" />

                <TextView
                    android:id="@+id/str_btn_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/stg_map"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/li_lay_chang_lang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:srcCompat="@drawable/settings_icon_region" />

                <TextView
                    android:id="@+id/str_btn_region"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/stg_language"
                    android:textColor="@color/black"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/btn_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:srcCompat="@drawable/settings_icon_notification" />

                <TextView
                    android:id="@+id/str_btn_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/stg_noti"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/btn_navigation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:srcCompat="@drawable/settings_icon_navigation" />

                <TextView
                    android:id="@+id/str_btn_navigation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/stg_navigation"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/btn_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:srcCompat="@drawable/settings_icon_storage"/>

                <TextView
                    android:id="@+id/str_btn_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/stg_storage"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/li_lay_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/btn_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    app:srcCompat="@drawable/settings_icon_info" />

                <TextView
                    android:id="@+id/str_btn_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/stg_info"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:textSize="17sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>