<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MapActivity"
    android:theme="@style/AppTheme">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <SearchView
            android:id="@+id/sv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/background_search_bar"
            android:elevation="5dp"
            android:fontFamily="@font/roboto"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_view"
            android:textSize="15sp">
        </SearchView>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry">

                <Button
                    android:id="@+id/btn_restaurant"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/icon_margin"
                    android:background="@drawable/map_icon_background"
                    android:drawableLeft="@drawable/map_icon_restaurant"
                    android:drawablePadding="-8dp"
                    android:elevation="5dp"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="@dimen/icon_padding"
                    android:scaleType="centerInside"
                    android:text="@string/restaurant_icon"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_coffee"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/icon_margin"
                    android:background="@drawable/map_icon_background"
                    android:drawableLeft="@drawable/map_icon_coffee"
                    android:paddingStart="@dimen/icon_padding"
                    android:scaleType="centerInside"
                    android:textAllCaps="false"
                    android:text="@string/coffee_icon"
                    android:textStyle="bold"
                    android:drawablePadding="-8dp"
                    android:elevation="5dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto" />

                <Button
                    android:id="@+id/btn_hotel"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/icon_margin"
                    android:background="@drawable/map_icon_background"
                    android:drawableLeft="@drawable/map_icon_hotel"
                    android:drawablePadding="-8dp"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="@dimen/icon_padding"
                    android:elevation="5dp"
                    android:scaleType="centerInside"
                    android:text="@string/hotel_icon"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_more"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/icon_margin"
                    android:background="@drawable/map_icon_background"
                    android:drawableStart="@drawable/map_icon_more"
                    android:paddingStart="@dimen/icon_padding"
                    android:scaleType="centerInside"
                    android:textAllCaps="false"
                    android:text="@string/more_icon"
                    android:textStyle="bold"
                    android:drawablePadding="-8dp"
                    android:elevation="5dp"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto"
                    tools:ignore="RtlSymmetry,SmallSp" />
            </LinearLayout>
        </HorizontalScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.93"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.93">
                

                <ImageButton
                    android:id="@+id/btn_to_traffic_density_mode"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/btn_traffic_mode" />


                <ImageButton
                    android:id="@+id/btn_traffic_mode"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/btn_traffic_mode" />

                <ImageButton
                    android:id="@+id/btn_gps"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/btn_gps" />

                <ImageButton
                    android:id="@+id/btn_direction"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_go" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
